# pancake

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  proxy.thrift
benchmark/: CMakeLists.txt
benchmark/src/: pancake_benchmark.cpp  pancake_benchmark.h  proxy_benchmark.cpp  timer.h
cmake-modules/: Dependencies.cmake
data/: README
libclient/: CMakeLists.txt  Makefile  cmake_install.cmake
libclient/src/: async_proxy_client.cpp  async_proxy_client.h  client.h  command_response_reader.cpp  command_response_reader.h  proxy_client.cpp  proxy_client.h
libstorage/: CMakeLists.txt  Makefile  cmake_install.cmake
libstorage/src/: memcached.cpp  memcached.h  redis.cpp  redis.h  rocksdb.cpp  rocksdb.h  storage_interface.h
proxy/: CMakeLists.txt
proxy/src/: basic_crypto.h  cuckoo_update_cache.h  distribution.cpp  distribution.h  encryption_engine.cpp  encryption_engine.h  operation.h  pancake_proxy.cpp  pancake_proxy.h  pancake_thrift_server.cpp  pancake_thrift_server.h  path_oram.h  path_oram_util.h  proxy.h  queue.cpp  queue.h  standard_distribution.h  update_cache.cpp  update_cache.h  util.cpp  util.h
server/: CMakeLists.txt
server/src/: proxy_server.cpp
service/: CMakeLists.txt
service/src/: proxy_constants.cpp  proxy_constants.h  proxy_types.cpp  proxy_types.h  thrift.cpp  thrift.h  thrift_handler.cpp  thrift_handler.h  thrift_handler_factory.cpp  thrift_handler_factory.h  thrift_response.cpp  thrift_response.h  thrift_response_client.cpp  thrift_response_client.h  thrift_response_client_map.cpp  thrift_response_client_map.h  thrift_response_service.cpp  thrift_response_service.h  thrift_server.cpp  thrift_server.h  thrift_utils.h
tests/: CMakeLists.txt
tests/src/: distribution_test.cpp  encryption_test.cpp  pancake_test.cpp  storage_interface_test.cpp  update_cache_test.cpp
thrift/: proxy.thrift
